增加自动发布

--- a/app/views/partials/header.phtml
+++ b/app/views/partials/header.phtml
@@ -1,4 +1,4 @@
-<h1>越简单，越美好！<small>More simpler more better</small></h1>
+<h1>越简单，越美好！<small style="display: inline-block;">More simpler more better</small></h1>
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
