--- a/app/views/partials/header.phtml
+++ b/app/views/partials/header.phtml
@@ -18,6 +18,7 @@
 			<ul class="nav navbar-nav">
 				<li class="<?= $nav==2?"active":""?>"><a href="/tag/cakephp.html">Cakephp</a></li>
 				<li class="<?= $nav==3?"active":""?>"><a href="/link.html">友情链接</a></li>
+				<li><a href="/json/">JSON格式化</a></li>
 				<li class="dropdown <?= $nav==4?"active":""?>"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-haspopup="true"
 					aria-expanded="false">标签 <span class="caret"></span></a>
