--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0,user-scalable=no, viewport-fit=cover">
         <title><?= $layout_title?>-朝军的博客</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="<?php echo $this->url->get('/css/style.css')?>">
+        <link rel="stylesheet" href="<?php echo $this->url->get('/css/style.min.css')?>">
         <link rel="shortcut icon" type="image/x-icon" href="<?php echo $this->url->get('/img/favicon.ico')?>"/>
     </head>
     <body>
@@ -15,6 +15,6 @@
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <div class="footer">&copy;<?= date("Y")?> power by <a href="/">朝军</a> Engine by <a href="https://phalconphp.com" target="_blank">Phalcon</a> Style by <a href="https://v3.bootcss.com/" target="_blank">Bootstrap</a></div>
+        <div class="footer"><span>&copy;<?= date("Y")?> power by <a href="/">朝军</a></span> <span>Engine by <a href="https://phalconphp.com" target="_blank">Phalcon</a></span> <span>Style by <a href="https://v3.bootcss.com/" target="_blank">Bootstrap</a></span></div>
     </body>
 </html>
