增加统计代码

--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -16,5 +16,15 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <div class="footer"><span>&copy;<?= date("Y")?> power by <a href="/">朝军</a></span> <span>Engine by <a href="https://phalconphp.com" target="_blank">Phalcon</a></span> <span>Style by <a href="https://v3.bootcss.com/" target="_blank">Bootstrap</a></span></div>
+        <script type="text/javascript">
+    	<!-- 百度统计 -->
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?9471111af14ca15e4d154634e66c0336";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>
     </body>
 </html>
